style/custom.css
/* 
* This is custom.css file created for relation.glitch.me 
* by Satnam S Virdi (@satnamsvirdi).
* It inlcludes two sections of customization i.e. Color tweeks
* and Non-color tweeks.
* Color tweeks section only consists of colors and Non-color
* tweeks section consists of rest of the customizations.
*/

/* Custom color pallette */

th:nth-child(3) {
  background: var(--bg-starter) !important;
  color: white;
  /*transform: scale(1.2);*/
  /*transform-origin: 50% 50%;*/
  margin-top: -9px;
}

:root {
  --bg-starter: #20c997;
  --blue-900: #03045eff;
  --blue-800: #023e8aff;
  --blue-700: #0077b6ff;
  --blue-600: #0096c7ff;
  --blue-500: #00b4d8ff;
  --blue-400: #48cae4ff;
  --blue-300: #90e0efff;
  --blue-200: #ade8f4ff;
  --blue-100: #caf0f8ff;
  --blue-black: #010228;
  --blue-fade: #6c658d;
  --blue-focus: rgba(72, 202, 228, 0.5);
  --blue-white: #edfafd;
  --blue-whiter: #f2fafc;
  --blue-whiteless: #dcf5fa;

  --white: #fff;
  --gray-100: #f8f9faff;
  --gray-200: #e9ecefff;
  --gray-300: #dee2e6ff;
  --gray-400: #ced4daff;
  --gray-500: #adb5bdff;
  --gray-600: #6c757dff;
  --gray-700: #495057ff;
  --gray-800: #343a40ff;
  --gray-900: #212529ff;

  --secondary: #6c757d;
}

@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
/* ||Section : Non-color tweeks */

/* setting custom icon for hamburger menu for dark background */
.navbar-toggler-icon {
  background-image: url(data:image/svg+xml,%3csvg xmlns=http://www.w3.org/2000/svg width=30 height=30 viewBox=0 0 30 30%3e%3cpath255 255 255 0.7 stroke-linecap=round stroke-miterlimit=10 stroke-width=2 d=M4 7h22M4 15h22M4 23h22/%3e%3c/svg%3e) !important;
}

/* carousel buttons */
.carousel-control-prev-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%236c757dff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e") !important;
}
.carousel-control-next-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%236c757dff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e") !important;
}

/* customizing carousel item and indicators */
.carousel-indicators {
  bottom: 0px !important;
}
.carousel-indicators li {
  height: 10px !important;
  width: 10px !important;
  border-radius: 50px !important;
  border-top: 0 !important;
  border-bottom: 0 !important;
  background-color: var(--gray-600) !important;
}
.carousel-item {
  min-width: 250px;
  max-width: 800px;
  border-radius: 5px;
}

/* 
* creating clent-box for displaying clients 
* and populating with background images
*/
.client-box {
  background: transparent;
  max-height: auto;
  max-width: 120px;
  height: 60px;
  width: 100%;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: 50%;
  filter: grayscale(90%) opacity(35%);
}

.client-box-item-1 {
  background-image: url("https://cdn.glitch.com/3d136bed-a51b-42b2-abce-070e1be89f08%2Fo-reillly_logo.png?v=1606471096887");
}
.client-box-item-2 {
  background-image: url("https://cdn.glitch.com/3d136bed-a51b-42b2-abce-070e1be89f08%2Fpenguin_logo.jpg?v=1606471099166");
}
.client-box-item-3 {
  background-image: url("https://cdn.glitch.com/3d136bed-a51b-42b2-abce-070e1be89f08%2Freuters_logo.png?v=1606471105344");
}
.client-box-item-4 {
  background-image: url("https://cdn.glitch.com/3d136bed-a51b-42b2-abce-070e1be89f08%2Fwsj_logo.jpg?v=1606471108079");
}
.client-box-item-5 {
  background-image: url("https://images.unsplash.com/photo-1553835973-dec43bfddbeb?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjE0NTg5fQ");
}

/* media queries for custom classes and hero illustration settings */
@media (min-width: 767px) {
  .btn-md-inline {
    display: inline-block !important;
    width: auto !important;
    margin-top: 0 !important;
  }
}

@media (min-width: 992px) {
  .hero-illustration {
    position: absolute !important;
    right: -160px;
    top: 10px;
  }
  .hero-illustration img {
    width: 700px;
    user-select: none;
  }
}

@media (min-width: 1200px) {
  .hero-illustration {
    position: absolute !important;
    right: -180px;
    top: -10px;
  }
  .hero-illustration img {
    width: 840px;
  }
}

/* ||Section : Color tweeks */

/* general color setting for body and heading */
body {
  color: var(--gray-600) !important;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--gray-800);
}

/* 
* custom colors for navbar and navbar links
* with hover, focus and active states
*/
header {
  background: var(--blue-800);

  background: rgb(4, 85, 189);
  background: linear-gradient(
    212deg,
    rgba(4, 85, 189, 1) 0%,
    rgba(4, 77, 170, 1) 50%,
    rgba(2, 62, 138, 1) 100%
  );
}

.custom-navbar-bg {
  background-color: var(--blue-800) !important;
}

.navbar,
.navbar-brand,
.navbar .nav-link {
  color: var(--blue-white) !important;
  user-select: none;
}

.navbar-brand:hover,
.navbar .nav-link:hover,
.navbar-brand:focus,
.navbar .nav-link:focus {
  color: var(--blue-400) !important;
}

.navbar-brand:active,
.navbar .nav-link:active {
  color: var(--blue-500) !important;
}
.navbar .nav-link.active {
  color: var(--blue-300) !important;
}

.navbar-brand:focus,
.navbar .nav-link:focus,
.footer-link:focus {
  outline: 0 !important;
  box-shadow: 0 0 0 0.2rem var(--blue-focus) !important;
  border-radius: 0.3rem;
}

/* dropdown menu, items, header, and divider */
.dropdown-menu {
  background-color: var(--blue-white) !important;
  border-color: var(--blue-100) !important;
}
.dropdown-item {
  color: var(--blue-800) !important;
  background-color: transparent !important;
}
.dropdown-item:hover {
  color: var(--blue-white) !important;
  background-color: var(--blue-400) !important;
}
.dropdown-item:active,
.dropdown-item.active {
  color: var(--blue-white) !important;
  background-color: var(--blue-500) !important;
}
.dropdown-item:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem var(--blue-focus) !important;
}
.dropdown-item:disabled,
.dropdown-item.disabled {
  opacity: 0.8;
}
.dropdown-divider {
  border-top-color: var(--blue-100) !important;
}
.dropdown-header {
  color: var(--blue-600) !important;
}

/* customizing jumbotron background and text color */
.jumbotron {
  background: var(--blue-800) important;

  background: rgb(4, 85, 189);
  background: linear-gradient(
    212deg,
    rgba(4, 85, 189, 1) 0%,
    rgba(4, 77, 170, 1) 50%,
    rgba(2, 62, 138, 1) 100%
  );
}
.jumbotron h1 {
  color: var(--blue-white);
}
.jumbotron p {
  color: var(--blue-300) !important;
}

/* 
* customizing buttons and their different states 
* - normal
* - hover
* - focus
* - active
*/
.btn-primary {
  color: var(--blue-800) !important;
  background-color: var(--blue-white) !important;
}
.btn-outline-primary {
  color: var(--blue-white) !important;
}
.btn-primary,
.btn-outline-primary {
  border-color: var(--blue-white) !important;
}
.btn-link {
  color: var(--blue-600) !important;
}

.btn-primary:hover {
  background-color: var(--blue-100) !important;
}
.btn-outline-primary:hover {
  color: var(--blue-800) !important;
  background-color: var(--blue-white) !important;
}
.btn-primary:hover,
.btn-outline-primary:hover {
  border-color: var(--blue-400) !important;
}
.btn-link:hover {
  color: var(--blue-800) !important;
}

.btn-primary:focus,
.btn-primary.focus,
.btn-primary:active,
.btn-primary.active {
  box-shadow: 0 0 0 0.2rem var(--blue-focus) !important;
}

.btn-primary:active,
.btn-outline-primary:active,
.btn-primary.active,
.btn-otline-primary.active {
  background-color: var(--blue-200) !important;
}

.btn-primary:disabled {
  color: var(--blue-800) !important;
  background: var(--blue-white) !important;
}
.btn-outline-primary:disabled {
  background: inherit !important;
  border: 1px solid var(--blue-100) !important;
}

.btn-primary:disabled:hover {
  border-color: var(--blue-white) !important;
  cursor: not-allowed;
}
.btn-outline-primary:disabled:hover {
  background: inherit !important;
  color: var(--blue-white) !important;
  cursor: not-allowed;
  border: 1px solid var(--blue-white) !important;
}

/* focus for carousel buttons */
/* .carousel-control-prev:focus,
.carousel-control-next:focus {
  background: ;
  box-shadow: 0 0 0 0.2rem var(--blue-focus) !important;
  border-radius: .3rem;
} */

/* custom carousel buttons color */
/* .carousel-control-prev,
.carousel-control-next {
  color: var(--secondary) !important;
} */

/* feature icon */
.feature-icon {
  color: var(--gray-600);
}

/* colors for long-width small CTA sections */
.bg-accent {
  background-color: var(--blue-400) !important;
  background-image: linear-gradient(325deg, var(--blue-200), var(--blue-500));

  background: rgb(81, 232, 232);
  background: linear-gradient(
    212deg,
    rgba(81, 232, 232, 1) 0%,
    rgba(0, 180, 216, 1) 100%
  );

  background: rgb(81, 232, 232);
  background: linear-gradient(
    212deg,
    rgba(81, 232, 232, 1) 0%,
    rgba(0, 180, 216, 1) 54%
  );
}
.text-accent {
  color: var(--blue-white);
}

/* color for carousel item */
.carousel-item {
  background-color: var(--gray-100);
}

/* alternate section color */
.bg-alternative {
  background-color: var(--gray-100);
}

/* 
* footer customizations
* - colors & backgrounds
* - links
*/
.footer-dark {
  color: var(--blue-white);
  background-color: var(--blue-black);

  background: rgb(3, 39, 85);
  background: linear-gradient(
    212deg,
    rgba(3, 39, 85, 1) 0%,
    rgba(2, 4, 96, 1) 50%,
    rgba(1, 2, 40, 1) 100%
  );
}

footer h6 {
  color: var(--blue-white);
}

.footer-link {
  color: var(--blue-white);
}
.footer-btn-link,
.footer-secondary-text {
  color: var(--blue-fade) !important;
}

.footer-link:hover {
  color: var(--blue-400);
}
.footer-btn-link:hover {
  color: var(--blue-400) !important;
}

.footer-btn-link:focus {
  text-decoration: underline !important;
}

.footer-link:active {
  color: var(--blue-500);
}
.footer-btn-link:active {
  color: var(--blue-500) !important;
}

.footer-border-top {
  border: 0;
  border-top-width: 1px;
  border-style: solid;
  border-color: var(--blue-fade);
}
/* ///////////////////////////// */
.table-custom-bg,
tbody th[scope="row"] {
  background: var(--blue-whiteless) !important;
  color: var(--blue-700);
}

.table > :not(caption) > * > * {
  background-image: linear-gradient(transparent, transparent) !important;
}
.table-striped tbody.bg-blue-white tr:nth-of-type(odd) {
  background-color: var(--white) !important;
}
.table-striped tbody.bg-blue-white tr:nth-of-type(even) {
  background-color: var(--blue-whiteless) !important;
}

tfoot {
  background: var(--blue-600);
  color: var(--white);
}
tfoot th {
  vertical-align: middle !important;
  height: 70px;
}
tfoot th {
  font-size: 1.3rem;
  font-weight: 600;
}
tfoot th small {
  color: var(--blue-white);
}
tfoot th[scope="row"] {
  font-size: 1rem;
}

.terms h6 {
  font-size: 0.9rem;
  font-weight: 600px;
}
.terms li {
  font-size: 0.8rem;
  font-weight: 400;
  line-height: 1.6rem;
}

.icon-light {
  color: var(--gray-600);
}

/* Animation */

@keyframes fadeInUp {
  from {
    transform: translateX(100px);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

.dropdown:hover .dropdown-menu {
  display: block;
}

